--- a/noto-sans-sc-partial.css
+++ b/noto-sans-sc-partial.css
@@ -1,8 +1,3 @@
-/*
-    JP より先に SC を表示させたいもの
-    Unicode Converter: https://tech-unlimited.com/escape-unicode.html
-    see: https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Noto+Sans+SC:wght@100..900&display=swap
-*/
 /* [33] */
 @font-face { /* 迂 */
     font-family: 'Noto Sans SC partial';
@@ -46,10 +41,10 @@
     unicode-range: U+7a97;
 }
 /* [114] */
-@font-face { /* 启 */
+@font-face { /* 启, 曾 */
     font-family: 'Noto Sans SC partial';
     src: url('https://fonts.gstatic.com/s/notosanssc/v37/k3kXo84MPvpLmixcA63oeALhLOCT-xWNm8Hqd37g1OkDRZe7lR4sg1IzSy-MNbE9VH8V.114.woff2') format('woff2');
-    unicode-range: U+542f;
+    unicode-range: U+542f, U+66fe;
 }
 /* [115] */
 @font-face { /* 极, 适 */
